[TOKN-69] Fix recommended products' spacing.

--- a/less/_components/product-details/_moreProducts.less
+++ b/less/_components/product-details/_moreProducts.less
@@ -32,7 +32,7 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 800px;
-    row-gap: @sizes-medium-3;
+    gap: @sizes-medium-3;
 
     @media @break-tablet {
       flex-direction: row;
@@ -44,10 +44,6 @@
       gap: 0;
       justify-content: space-between;
       max-width: none;
-    }
-
-    article {
-      margin-right: @sizes-medium-3 !important;
     }
   }
 
